CCD-3669: fixed test case issues